--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -12,8 +12,8 @@
 name: Update Checker
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/ACwifidude/openwrt
+  REPO_BRANCH: openwrt-21.02-nss-qsdk10.0
 
 on:
   workflow_dispatch:
