--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -20,8 +20,8 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/ACwifidude/openwrt
+  REPO_BRANCH: openwrt-21.02-nss-qsdk10.0
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
   DIY_P1_SH: diy-part1.sh
@@ -102,6 +102,8 @@ jobs:
       id: compile
       run: |
         cd openwrt
+        rm -rf bin
+        cp /usr/bin/upx staging_dir/host/bin/
         echo -e "$(nproc) thread compile"
         make -j$(nproc) || make -j1 || make -j1 V=s
         echo "::set-output name=status::success"
