--- a/.config
+++ b/.config
@@ -6187,13 +6187,13 @@ CONFIG_PACKAGE_uclient-fetch=y
 CONFIG_PACKAGE_umdns=y
 # CONFIG_PACKAGE_usbip is not set
 # CONFIG_PACKAGE_uugamebooster is not set
-CONFIG_PACKAGE_v2ray-core=y
+# CONFIG_PACKAGE_v2ray-core is not set
 
 #
 # v2ray-core Configuration
 #
 # CONFIG_V2RAY_CORE_COMPRESS_GOPROXY is not set
-CONFIG_V2RAY_CORE_COMPRESS_UPX=y
+# CONFIG_V2RAY_CORE_COMPRESS_UPX=y
 # end of v2ray-core Configuration
 
 # CONFIG_PACKAGE_v2ray-ctl is not set
