--- a/.config
+++ b/.config
@@ -7204,7 +7204,7 @@ CONFIG_PACKAGE_lm-sensors=y
 # CONFIG_PACKAGE_lscpu is not set
 # CONFIG_PACKAGE_lslocks is not set
 # CONFIG_PACKAGE_lsns is not set
-# CONFIG_PACKAGE_lsof is not set
+CONFIG_PACKAGE_lsof=y
 # CONFIG_PACKAGE_lxc is not set
 # CONFIG_PACKAGE_maccalc is not set
 # CONFIG_PACKAGE_macchanger is not set
