--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -12,9 +12,9 @@
 name: Update Checker
 
 env:
-  REPO_URL: https://github.com/ACwifidude/openwrt
-  REPO_BRANCH: kernel5.4-nss-qsdk10.0
-
+  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_BRANCH: master
+  
 on:
   workflow_dispatch:
 #  schedule:
